# vetta

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  generate_audio.sh  justfile
.github/workflows/: ci-docs.yml  ci-python.yml  ci-rust.yml  ci.yml  rust.yml
_dev_scripts/: audio_common.sh  gen_test_audio_linux.sh  gen_test_audio_macos.sh  setup_piper_linux.sh
apps/cli/: Cargo.toml
apps/cli/src/: cli.rs  context.rs  main.rs  output.rs  reporter.rs
apps/migrate/: Cargo.toml
apps/migrate/src/: main.rs
crates/core/: Cargo.toml  build.rs
crates/core/src/: domain.rs  earnings_processor.rs  lib.rs
dev_scripts/: gen_test_audio_linux.sh
docs/: _nav.json  package-lock.json  package.json  rspress.config.ts  t.md  tsconfig.json
docs/architecture/: configuration.md  grpc-transport.md  monorepo.md  overview.md  python-service.md  stt-pipeline.md  stt-strategy.md
docs/content/: index.md
docs/content/architecture/: overview.md
docs/content/configuration/: embed-servicer.md  stt-service.md
docs/content/guide/: quick-start.md
docs/content/technical/: architecture.md  data-model.md  processing-pipeline.mdx
docs/guide/: introduction.md  quick-start.md
infra/ec2/: init.sh
infra/terraform/: .terraform.lock.hcl  main.tf  variables.tf
proto/: speech.proto
proto/reranker/: reranker.proto
proto/speech/: speech.proto
rust/: Cargo.toml
rust/apps/cli/: Cargo.toml
rust/apps/migrate/: Cargo.toml
rust/apps/migrate/src/: main.rs
services/stt/: .gitignore  Makefile  config.toml  diarization.py  embed_chunks.py  pyproject.toml  search_test.py  servicer.py  settings.py
services/stt/local/: .gitignore  Dockerfile  Makefile  audio.py  config.toml  diarization.py  main.py  postprocessor.py  pyproject.toml  servicer.py  settings.py
services/stt/local/tests/: conftest.py  test_integration.py  test_postprocessor.py  test_servicer.py  test_settings.py
(+67 files in other folders)
