[project]
name = "whisper-stt-service"
version = "0.1.0"
requires-python = ">=3.12"

dependencies = [
    "faster-whisper==1.1.0",
    "grpcio==1.68.0",
    "grpcio-tools==1.68.0",
    "psutil==6.1.0",
    "requests>=2.32.5",
]

[dependency-groups]
dev = [
    "pytest==8.3.0",
    "pytest-mock==3.14.0",
]

[tool.uv]
default-groups = ["dev"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]
